# ayatana-indicator-notifications

./: .build.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  update-po.sh  update-pot.sh
data/: CMakeLists.txt  Makefile.am  ayatana-indicator-notifications.desktop.in  ayatana-indicator-notifications.service.in  org.ayatana.indicator.notifications  org.ayatana.indicator.notifications.gschema.xml  org.ayatana.indicator.notifications.gschema.xml.in  org.ayatana.indicator.notifications.gschema.xml.in.in
data/icons/: Makefile.am
debian/: ayatana-indicator-notifications.links  changelog  control  copyright  postinst  rules
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-notifications.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  (+98 more)
src/: CMakeLists.txt  Makefile.am  dbus-spy.c  indicator-notifications-settings.c  indicator-notifications.c  main.c  notification-menuitem.c  notification.c  service.c  service.h  settings.h
