iconsdir = $(INDICATORICONSDIR)

icons_DATA = \
	     ayatana-indicator-notification-close-select.svg \
	     ayatana-indicator-notification-close-deselect.svg \
	     ayatana-indicator-notification-read.svg \
	     ayatana-indicator-notification-read-dnd.svg \
	     ayatana-indicator-notification-unread.svg \
	     ayatana-indicator-notification-unread-dnd.svg

EXTRA_DIST = $(icons_DATA)
